// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryItem renders InventoryItem component with no stock 1`] = `
<DocumentFragment>
  <div
    class="SummaryBlock InventoryItem"
  >
    <div
      class="InventoryItem__ProductImageWrapper"
    >
      <div
        class="stx-image"
      >
        <div
          class="stx-image--content"
        >
          <div
            class="stx-image--holder"
          >
            <img
              alt="Test Title"
              class="stx-image--image"
              src=""
              title="Test Title"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="InventoryItem__ProductDetails"
    >
      <div
        class="stx-details stx-details--left"
      >
        <div
          class="stx-details__title"
        >
          Test Title
        </div>
        <div
          class="stx-details__description"
        >
          <div>
            Test description
          </div>
        </div>
      </div>
      <div
        class="InventoryItem__ProductQuantityWrapper"
      >
        <div
          class="SoldOut"
        >
          Sold Out
        </div>
      </div>
    </div>
    <div
      class="InventoryItem__RemoveItemWrapper"
    />
  </div>
</DocumentFragment>
`;

exports[`InventoryItem renders InventoryItem component with stock 1`] = `
<DocumentFragment>
  <div
    class="SummaryBlock InventoryItem"
  >
    <div
      class="InventoryItem__ProductImageWrapper"
    >
      <div
        class="stx-image"
      >
        <div
          class="stx-image--content"
        >
          <div
            class="stx-image--holder"
          >
            <img
              alt="Test Title"
              class="stx-image--image"
              src=""
              title="Test Title"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="InventoryItem__ProductDetails"
    >
      <div
        class="stx-details stx-details--left"
      >
        <div
          class="stx-details__title"
        >
          Test Title
        </div>
        <div
          class="stx-details__description"
        >
          <div>
            Test description
          </div>
        </div>
      </div>
      <div
        class="InventoryItem__ProductQuantityWrapper"
      >
        <div
          aria-label="ordered quantity"
          class="ProductQuantity"
        >
          3
        </div>
        <div
          class="Arrow"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              opacity="0.8"
            >
              <path
                clip-rule="evenodd"
                d="M14.7471 4.33289L22.4142 12L14.7471 19.6671L13.3329 18.2529L19.5858 12L13.3329 5.7471L14.7471 4.33289Z"
                fill="rgba(0, 0, 0, 0.65)"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M3 11H21V13H3V11Z"
                fill="rgba(0, 0, 0, 0.65)"
                fill-rule="evenodd"
              />
            </g>
          </svg>
        </div>
        <div
          aria-label="available quantity"
          class="ProductQuantity"
        >
          1
        </div>
      </div>
    </div>
    <div
      class="InventoryItem__RemoveItemWrapper"
    >
      <button
        aria-label="remove item"
        class="InventoryItem__RemoveItem"
      >
        <svg
          aria-labelledby="button"
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            opacity="0.8"
          >
            <path
              clip-rule="evenodd"
              d="M17.7071 7.70706L7.70712 17.7071L6.29291 16.2928L16.2929 6.29285L17.7071 7.70706Z"
              fill="black"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M16.2929 17.7071L6.29291 7.70706L7.70712 6.29285L17.7071 16.2928L16.2929 17.7071Z"
              fill="black"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3ZM1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12Z"
              fill="black"
              fill-rule="evenodd"
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
